# fpga-trace

./: .gitattributes  .gitignore  LICENSE  README.md
arm/: .gitignore  configure
arm/extra/: ._cornell_box_orange.scene  cornell_box_dragon_crystal.scene  cornell_box_earth.scene  cornell_box_orange.scene  cornell_box_victory.scene  cornell_box_victory_crystal.scene  dragon.scene  dragon_outside.scene  toy.scene
arm/scenes/: test.scene  (+3 more)
arm/src/p3/: CMakeLists.txt  main.cpp  p3  randomgeo.cpp  randomgeo.hpp  raytracer.cpp  raytracer.hpp  util.hpp
design/: raytracer_design.xpr
docs/: FINAL.md  PROPOSAL.md  presentation.pptx
hls/: .gitignore  testbench.cpp  triangle_intersect.cpp  triangle_intersect.h
raytracer/: p3  writeup.txt
raytracer/src/: CMakeLists.txt
raytracer/src/application/: CMakeLists.txt  camera_roam.cpp  imageio.cpp  opengl.hpp  scene_loader.hpp
raytracer/src/glew/: CMakeLists.txt
raytracer/src/math/: CMakeLists.txt  axis.hpp  color.cpp  color.hpp  contracts.h  math.hpp  matrix.cpp  matrix.hpp  quaternion.hpp  quickselect.hpp  random462.cpp  random462.hpp  vector.hpp
raytracer/src/p3/: CMakeLists.txt  main.cpp  neighbor.cpp  neighbor.hpp  photon.cpp  photon.hpp  photonmap.cpp  photonmap.hpp  randomgeo.hpp  raytracer.cpp  raytracer.hpp  util.cpp  util.hpp
raytracer/src/scene/: CMakeLists.txt  bound.cpp  material.hpp  mesh.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp  simpletriangle.cpp  simpletriangle.hpp  sphere.cpp  sphere.hpp  texture.cpp  texture.hpp  triangle.cpp  triangle.hpp
raytracer/src/tinyxml/: CMakeLists.txt  tinyxml.h
(+390 files in other folders)
